# ChatSystem

./: .env.example  .gitignore  CHANGELOG.md  CHAPTER3_IEEE_FORMAT_EXTENDED.md  CONTRIBUTING.md  README.md  action.yml  dev.bat  docker-compose.example.yml  docker-compose.yml  render.yaml  run.txt  start.bat  stop.bat
.gemini/: gsd-file-manifest.json
mcp/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
mcp/config/profiles/: github-actions-default.yml
mcp/docs/: ai-false-positive-and-hallucination.md  co-che-chong-false-positive-va-hallucination.md  setup-sqlite-e2e.md  setup.md  severity-normalization.md  testing.md  vulnerability-classification-and-references.md
mcp/migrations/: env.py
mcp/migrations/versions/: bdf2034e591c_v3_6_pipeline_runs_gate_policy_audit.py  f3a8c2d19e74_v3_8_baseline_catchup_all_tables.py
mcp/prompts/: registry.yaml
mcp/prompts/v1/: analyze.system.md  analyze.user.j2  chat.system.md  cve.system.md  cve.user.j2  investigate.system.md  investigate.user.j2  summary.system.md  summary.user.j2  triage.system.md  triage.user.j2
mcp/scripts/: backfill_owasp_class.py  check_render_schema.py  cleanup_db.py  dedup_demo.py  dedup_preview.py  dedup_scenario.py  dedup_viz.py  fix_project_repo_slug.py  fix_render_v36_columns.py  lint_workflows.py  migrate_data_to_render.py  migrate_v2.py  reset_db.py  seed_demo_processing.py  smoke_test.py  sync_from_render.py  sync_render_to_local.py  verify_sync.py
mcp/src/: main.py  mcp_server.py
mcp/src/api/: analysis.py  artifacts.py  chat.py  config.py  findings.py  monitor.py  projects.py  stats.py
mcp/src/core/: auth.py  config.py  db.py  guardrails.py  profiles.py  secrets.py  security.py  webhook_security.py
mcp/src/models/: entities.py  schemas.py
mcp/src/repositories/: __init__.py  artifact_repo.py  audit_log_repo.py  config_repo.py  finding_repo.py  project_member_repo.py  project_repo.py  suppression_repo.py  user_repo.py
mcp/src/services/: command_service.py  config_service.py  enricher.py  github_client.py  monitor.py  normalizer.py  poller.py  processor.py  report_service.py  smtp_service.py  stats_service.py
mcp/src/services/llm/: client.py  prompt_loader.py  prompts.py  schemas.py  service.py  summary.py  triage.py
mcp/src/services/normalizers/: __init__.py  base.py  depcheck.py  eslint.py  factory.py  npm_audit.py  safety.py  sarif.py  severity.py  spotbugs.py  trivy.py  zap.py
mcp/tests/: conftest.py  test_ai_summary.py  test_api_integration.py  test_approve_carryforward.py  test_auth_v33.py  test_chat_api.py  test_config_api.py  test_correlate_run_findings.py  test_db.py  test_dedup_run_findings.py  test_delete_project.py  test_e2e.py  test_enricher.py  test_fp_learning.py  test_gate_approve.py  test_gate_policy_v36.py  test_github_client.py  test_grounding.py  test_group_a.py  test_guardrails.py  test_guardrails_injection.py  test_guardrails_live_gemini.py  test_guardrails_scrubbing.py  test_llm_api.py  test_llm_client.py  test_llm_schemas.py  test_llm_service.py  test_main.py  test_mcp_server.py  test_monitor_generic_v37.py  test_normalizer.py  test_normalizer_severity_v38.py  test_pagination.py  test_password_auth_v38.py  test_poller.py  test_processor.py  test_prompt_loader.py  test_prune_superseded.py  test_rbac_audit_v35.py  test_rbac_v3.py  (+8 more)
mcp/tests/services/llm/: conftest.py  test_service.py
(+380 files in other folders)
